# plat

./: CMakeLists.txt  README.md
Docs/: WorldFormat.md
Plat/: Main.cpp
Plat/World/: File.cpp  File.hpp  Token.hpp  TokenList.cpp  TokenList.hpp  Tokeniser.cpp  Tokeniser.hpp
